[package]
name = "zkp-auth"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6", features = ["v4"] }
log = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.14"
lazy_static = "1.4.0"
rand = "0.8.5"
hex = "0.4.3"
rand_core = "0.6.4"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"